--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "npx ts-node --esm ./prisma/index.ts",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
