--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@mui/x-data-grid": "^6.0.1",
     "@prisma/client": "^4.11.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
