--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
     "prisma": "^4.11.0",
     "sass": "^1.58.3",
