--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^4.11.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
     "next": "13.2.0",
@@ -34,8 +35,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
+    "jest": "^29.5.0",
     "prisma": "^4.11.0",
     "sass": "^1.58.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
