--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prisma": "npx ts-node --esm ./prisma/index.ts",
     "migrate": "npx prisma migrate dev --name init",
     "db-push": "npx prisma db push",
-    "prisma-ui": "npx prisma  studio"
+    "prisma-ui": "npx prisma  studio",
+    "test": "clear && jest --watch"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -25,6 +26,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^0.1.11",
+    "D": "^1.0.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
     "next": "13.2.0",
@@ -33,12 +35,16 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.14.6",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prisma": "^4.11.0",
     "sass": "^1.58.3",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
